fixed aside and footer spacings

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -211,14 +211,21 @@ aside {
   height: 400px;
   background-size: cover;
 }
+.aside_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60px;
+}
 .aside_title {
   font-size: 4rem;
+  font-weight: 400;
   letter-spacing: 0.2em;
-  line-height: 4.8rem;
+  line-height: 5.8rem;
   text-align: center;
 }
 .aside_btn_container {
-  margin-top: 100px;
   display: flex;
   gap: 40px;
   justify-content: center;
@@ -238,9 +245,13 @@ aside {
   border: #ffffff;
 }
 .aside_btn .btn::before{
-  content: url("/assets/img/common/arrow_on_btn.png");
-  /* 10px = 13px * 0.769   8px = 19px * 0.842*/
-  transform: scaleX(0.769) scaleY(0.842);
+  content: "";
+  display: inline-block;
+  width: 10px;
+  height: 16px;
+  background-image: url("/assets/img/common/arrow_icon_big.png");
+  background-size: contain;
+  vertical-align: middle;
   position: relative;
   top: 2px;
 }
@@ -268,18 +279,22 @@ footer .container {
 .footer_nav_container {
   display: flex;
   align-items: center;
-  font-size: 1.4rem;
-  letter-spacing: 0.2em;
-  line-height: 1.7rem;
 }
 .footer_nav_list {
   list-style: none;
-  margin-left: 30px;
+  margin-left: 40px;
   display: flex;
+  font-size: 1.4rem;
+  letter-spacing: 0.2em;
+  line-height: 2rem;
 }
 .footer_nav_list_item {
   border-right: solid 1px #000000;
-  padding: 0px 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.footer_nav_list_item:first-child{
+  padding-left: 0px;
 }
 .footer_nav_list_item a {
   color: #000000;
@@ -290,9 +305,8 @@ footer .container {
   height: 60px;
 }
 .footer_copyright {
-  margin-top: 10px;
   font-family: "Inknut Antiqua";
   font-size: 1rem;
   letter-spacing: 0.2rem;
-  line-height: 1.2rem;
+  line-height: 2.6rem;
 }
